
------------------------------------------------------------------------------
  
??/??/?? IAlibay, pgbarletta, mglagolev, hmacdope, manuel.nuno.melo, chrispfae, 
         ooprathamm, MeetB7, BFedder, v-parmar, MoSchaeffler, jbarnoud, jandom,
         xhgchen, jaclark5, DrDomenicoMarson, AHMED-salah00, schlaicha,
         SophiaRuan, g2707

 * 2.5.0

Fixes
  * Fix chi1_selections() ignored atom names CG1 OG OG1 SG and incorrectly returned
    None for amino acids CYS, ILE, SER, THR, VAL (Issue #4108)
  * Fix parsing of box vector in H5MD reader (Issue #4076)
  * Fix the misleading 'AtomGroup.guess_bonds()' docs and passed missing
    arguments (PR #4059)
  * Fix for NetCDF trajectories without `time` variable (Issue #4073)
  * Allows shape_parameter and asphericity to yield per residue quantities
    (Issue #3002, PR #3905)
  * Add tests for "No path data" exception raise in test_psa.py (Issue #4036)
  * Fix uninitialized `format` variable issue when calling
    `selections.get_writer` directly (PR #4043)
  * Fix tests should use results.rmsf to avoid DeprecationWarning (Issue #3695)
  * Fix EDRReader failing when parsing single-frame EDR files (Issue #3999)
  * Fix test clobbering in lib/test_util.py (PR #4000)
  * Fix MSD docs to use the correct error metric in example (Issue #3991)
  * Add 'PairIJ Coeffs' to the list of sections in LAMMPSParser.py
    (Issue #3336)

Enhancements
  * Improved speed of chi1_selection (PR #4109)
  * Add `progressbar_kwargs` parameter to `AnalysisBase.run` method, allowing
    to modify description, position etc of tqdm progressbars.
  * Add a nojump transformation, which unwraps trajectories so that particle
    paths are continuous. (Issue #3703, PR #4031)
  * Added AtomGroup TopologyAttr to calculate gyration moments (Issue #3904,
    PR #3905)
  * Add support for TPR files produced by Gromacs 2023 (Issue #4047)
  * Add distopia distance calculation library bindings as a selectable backend