@@ -1,15 +1,0 @@
-macos_instance:
-  image: ghcr.io/cirruslabs/macos-monterey-base:latest
-
-task:
-  script: |
-    brew update
-    brew install python@3.11
-    /opt/homebrew/bin/python3 -m venv ~/py_311
-    source ~/py_311/bin/activate
-    cd package
-    python -m pip install .
-    cd ../testsuite
-    python -m pip install .
-    python -m pip install pytest
-    python -m pytest MDAnalysisTests
