@@ -1,0 +1,31 @@
+linux_aarch64_task:
+  arm_container:
+    image: python:latest
+    cpu: 8
+    memory: 8G
+
+  ci_script: |
+    python3 --version
+    python3 -m venv mda-dev
+    source mda-dev/bin/activate
+    python3 -m pip install ./package
+    python3 -m pip install ./testsuite
+    python3 -m pip install pytest-xdist
+    python3 -m pytest -n 8 ./testsuite/MDAnalysisTests
+
+
+macos_arm64_task:
+  macos_instance:
+    image: ghcr.io/cirruslabs/macos-ventura-base:latest
+
+  ci_script: |
+    brew update
+    brew install python@3.11
+    /opt/homebrew/bin/python3 -m venv ~/py_311
+    source ~/py_311/bin/activate
+    cd package
+    python -m pip install .
+    cd ../testsuite
+    python -m pip install .
+    python -m pip install pytest pytest-xdist
+    python -m pytest -n auto MDAnalysisTests
