@@ -251,3 +251,14 @@ def no_deprecated_call(func=None, *args, **kwargs):
         __tracebackhide__ = True
         with _NoDeprecatedCallContext():
             return func(*args, **kwargs)
+
+
+def get_userid():
+    """
+    Calls os.geteuid() where possible, or returns 1000 (usually on windows).
+    """
+    # no such thing as euid on Windows, assuming normal user 1000
+    if (os.name == 'nt' or not hasattr(os, "geteuid")):
+        return 1000
+    else:
+        return os.geteuid()
